@@ -15,11 +15,10 @@
 <a href="ported.shtml">Ported Software</a>      |
 <a href="lists.shtml">Mailing Lists</a>         |
 <a href="licensing.shtml">Licensing Terms</a>   |
-<!-- <a href="who.shtml">Who are we?</a>             | -->
-<a href="http://sourceforge.net/project/memberlist.php?group_id=2435">Who are we?</a>             |
+<a href="who.shtml">Who are we?</a>             |
 <a href="news.shtml">News</a>                   |
 <a href="history.shtml">Project History</a> 
 </small>
 </p>
 
-<!--$Id: bottombar.html,v 1.3 2000-12-22 20:48:40 pfalcon Exp $-->
+<!--$Id: bottombar.html,v 1.4 2000-12-26 21:44:46 earnie Exp $-->
