@@ -29,6 +29,12 @@
 <tr>
 <td valign="top" align="left">
 
+<p>Currently this page is best served by viewing the SourceForge Member List for
+the MinGW group.  You can find this list at 
+<a href="http://sourceforge.net/project/memberlist.php?group_id=2435" target="_sf">
+http://sourceforge.net/project/memberlist.php?group_id=2435</a>.  Please note
+that Mumit Khan and Bruce Wampler are no longer active participants in MinGW
+development.</p>
 
 </td>
 </tr>
